--- a/index.html
+++ b/index.html
@@ -55,21 +55,10 @@
         }
 
         .logo-icon {
-            width: 36px; height: 36px;
-            background: var(--primary-maroon);
+            width: 36px;
+            height: 36px;
             border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-        }
-
-        .logo-icon::before {
-            content: '';
-            width: 16px; height: 16px;
-            background: white;
-            border-radius: 50%;
-            position: absolute;
+            overflow: hidden;
         }
 
         .logo {
@@ -505,6 +494,48 @@
             transition: all 0.3s ease;
         }
 
+        .extension-gallery {
+            margin: 2rem 0 3rem;
+        }
+
+        .gallery-main {
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 10px 40px rgba(139, 75, 92, 0.2);
+            margin-bottom: 1rem;
+            background: #1a1a1a;
+        }
+
+        .gallery-main img {
+            width: 100%;
+            max-height: 520px;
+            object-fit: contain;
+            display: block;
+        }
+
+        .gallery-thumbs {
+            display: flex;
+            gap: 1rem;
+            justify-content: center;
+        }
+
+        .gallery-thumb {
+            width: 120px;
+            height: 80px;
+            object-fit: cover;
+            border-radius: 8px;
+            cursor: pointer;
+            border: 3px solid transparent;
+            transition: all 0.2s ease;
+            opacity: 0.6;
+        }
+
+        .gallery-thumb:hover { opacity: 1; }
+        .gallery-thumb.active {
+            border-color: var(--primary-maroon);
+            opacity: 1;
+        }
+
         .feature:hover {
             transform: translateX(5px);
             box-shadow: 0 8px 30px rgba(139, 75, 92, 0.15);
@@ -687,7 +718,7 @@
     <header>
         <nav class="container">
             <a href="#" class="logo-container" onclick="showPage('home'); return false;">
-                <div class="logo-icon"></div>
+                <img class="logo-icon" src="1764711217820-5f5a4285-6bf7-43de-b0d4-18a712d5173f_1.png" alt="CogniCode logo">
                 <span class="logo">CogniCode</span>
             </a>
             <ul class="nav-links" id="navLinks">
@@ -828,6 +859,22 @@
                         <div class="feature">
                             <h4>Progress Tracking</h4>
                             <p>Monitor your critical thinking development over time with detailed analytics and personalized feedback.</p>
+                        </div>
+                    </div>
+
+                    <div class="section-header" style="margin-top: 3rem;">
+                        <h2>See It In Action</h2>
+                        <p>MindShield analyzes websites in real time and surfaces the manipulation patterns they use.</p>
+                    </div>
+
+                    <div class="extension-gallery">
+                        <div class="gallery-main">
+                            <img id="galleryMainImg" src="mindshield1.png" alt="MindShield showing cognitive risk score of 80 on Instagram">
+                        </div>
+                        <div class="gallery-thumbs">
+                            <img src="mindshield1.png" alt="Cognitive Risk Score" class="gallery-thumb active" onclick="setGalleryImg(this, 'MindShield showing cognitive risk score of 80 on Instagram')">
+                            <img src="mindshield2.png" alt="Chrome Web Store listing" class="gallery-thumb" onclick="setGalleryImg(this, 'MindShield on the Chrome Web Store')">
+                            <img src="mindshield3.png" alt="Detected patterns list" class="gallery-thumb" onclick="setGalleryImg(this, 'MindShield showing all detected manipulation patterns')">
                         </div>
                     </div>
 
@@ -1019,7 +1066,7 @@
 
                     <div class="info-box">
                         <h2>Other Ways to Connect</h2>
-                        <p><strong>Email:</strong> cognicode.org@gmail.com</p>
+                        <!-- <p><strong>Email:</strong> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="f5969a929b9c969a9190db9a8792b59298949c99db969a98">[email&#160;protected]</a></p> -->
                         <p><strong>Instagram:</strong> @cogni.code</p>
                         <p><strong>CogniNotes:</strong> <a href="https://cogninotes.substack.com" target="_blank" style="color: var(--primary-maroon); text-decoration: underline;">CogniNotes on Substack</a></p>
                     </div>
@@ -1047,13 +1094,13 @@
                     <a href="#" onclick="showPage('about'); return false;">About Us</a>
                     <a href="#" onclick="showPage('contact'); return false;">Contact</a>
                     <a href="https://www.instagram.com/cogni.code/" target="_blank">Instagram</a>
-                    <a href="mailto:cognicode.org@gmail.com">Email Us</a>
+                    <!-- <a href="/cdn-cgi/l/email-protection#e3808c848d8a808c8786cd8c9184a3848e828a8fcd808c8e">Email Us</a> -->
                 </div>
             </div>
         </div>
     </footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Page Navigation
         function showPage(pageId) {
             document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
@@ -1139,6 +1186,17 @@
                 });
             }
         });
+
+        // Gallery image switcher
+        function setGalleryImg(thumb, altText) {
+            var mainImg = document.getElementById('galleryMainImg');
+            mainImg.src = thumb.src;
+            mainImg.alt = altText;
+            document.querySelectorAll('.gallery-thumb').forEach(function(t) {
+                t.classList.remove('active');
+            });
+            thumb.classList.add('active');
+        }
 
         // Close mobile menu on outside click
         document.addEventListener('click', function(e) {
