--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
 
                     <div class="card-grid">
                         <div class="card workshop-card">
-                            <img src="https://images.unsplash.com/photo-1509062522246-3755977927d7?w=600&h=400&fit=crop" alt="Middle School Workshop">
+                            <img src="Image.png" alt="Middle School Workshop">
                             <h3>Workshops</h3>
                             <p><strong>Grades:</strong> 4-8</p>
                             <p><strong>Duration:</strong> 60-minute interactive sessions</p>
@@ -909,7 +909,7 @@
                         </div>
 
                         <div class="card workshop-card">
-                            <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=600&h=400&fit=crop" alt="High School Ambassadors">
+                            <img src="DSCN0104.jpeg" alt="High School Ambassadors">
                             <h3>High School Chapter Program</h3>
                             <p><strong>Grades:</strong> 9-12</p>
                             <p><strong>Join CogniCode!</strong></p>
