--- a/index.html
+++ b/index.html
@@ -883,9 +883,9 @@
                             <img id="galleryMainImg" src="mindshield1.png" alt="MindShield showing cognitive risk score of 80 on Instagram">
                         </div>
                         <div class="gallery-thumbs">
-                            <img src="mindshield1.png" alt="Cognitive Risk Score" class="gallery-thumb active" onclick="setGalleryImg(this, 'MindShield showing cognitive risk score of 80 on Instagram')">
-                            <img src="mindshield2.png" alt="Chrome Web Store listing" class="gallery-thumb" onclick="setGalleryImg(this, 'MindShield on the Chrome Web Store')">
-                            <img src="mindshield3.png" alt="Detected patterns list" class="gallery-thumb" onclick="setGalleryImg(this, 'MindShield showing all detected manipulation patterns')">
+                            <img src="mindshield1.jpg" alt="Cognitive Risk Score" class="gallery-thumb active" onclick="setGalleryImg(this, 'MindShield showing cognitive risk score of 80 on Instagram')">
+                            <img src="mindshield2.jpg" alt="Chrome Web Store listing" class="gallery-thumb" onclick="setGalleryImg(this, 'MindShield on the Chrome Web Store')">
+                            <img src="mindshield3.jpg" alt="Detected patterns list" class="gallery-thumb" onclick="setGalleryImg(this, 'MindShield showing all detected manipulation patterns')">
                         </div>
                     </div>
 
