--- a/index.html
+++ b/index.html
@@ -64,13 +64,6 @@
             position: relative;
         }
 
-        .logo-icon::before {
-            content: '';
-            width: 16px; height: 16px;
-            background: white;
-            border-radius: 50%;
-            position: absolute;
-        }
 
         .logo {
             font-family: 'Spectral', serif;
@@ -729,7 +722,7 @@
     <header>
         <nav class="container">
             <a href="#" class="logo-container" onclick="showPage('home'); return false;">
-                <div class="logo-icon"></div>
+                <img class="logo-icon" src="1764711217820-5f5a4285-6bf7-43de-b0d4-18a712d5173f_1.png" alt="CogniCode logo">
                 <span class="logo">CogniCode</span>
             </a>
             <ul class="nav-links" id="navLinks">
