--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                 <li><a href="#" onclick="showPage('home'); return false;">Home</a></li>
                 <li><a href="#" onclick="showPage('mindshield'); return false;">MindShield</a></li>
                 <li><a href="#" onclick="showPage('workshops'); return false;">Workshops</a></li>
-                <li><a href="https://cognotes.substack.com/" target="_blank">Blog</a></li>
+                <li><a href="https://cogninotes.substack.com" target="_blank">CogniNotes</a></li>
                 <li><a href="#" onclick="showPage('about'); return false;">About</a></li>
                 <li><a href="#" onclick="showPage('contact'); return false;">Contact</a></li>
             </ul>
